Fix "en direct" (overflow, link)

--- a/themes/apeas/default/css/index.css
+++ b/themes/apeas/default/css/index.css
@@ -365,6 +365,7 @@ h2 a {
     height: 110px;
     margin-left: 20px;
     margin-top: 10px;
+    overflow: hidden;
 }
 
 h3 {
